k8s/api-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: api-ingress
 annotations:
   alb.ingress.kubernetes.io/scheme: internal
   alb.ingress.kubernetes.io/target-type: ip
spec:
 ingressClassName: alb
 rules:
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: api-service
               port:
                 number: 80
